[package]
name = "embedded-nano-mesh-arduino-nano-example"
version = "2.0.0"
authors = ["Yevhen Shevchenko (boshtannik) <boshtannik@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "embedded-nano-mesh-arduino-nano-example"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
embedded-hal-nb = "1.0.0"
ufmt = "0.2.0"

embedded-nano-mesh = { path = "../embedded-nano-mesh" }
void = { version = "1.0.2", default-features = false }

platform-millis-arduino-nano = { git = "https://github.com/boshtannik/platform-millis-arduino-nano.git", rev = "4a1d42a24c77ba222291c21016efaa9b236beda4" }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
